# ctrm

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  README.md  REPRODUCTION.md  css.bundle.js  docker-compose.yml  index.bundle.js  index.bundle.js.LICENSE.txt  index.html  mypy.ini  setup.py
cpp_helper/spars_wrapper/: CMakeLists.txt  setup.py
cpp_helper/spars_wrapper/src/: spars.cpp
docs/: .gitignore  conf.py  ctrm.environment.fcl_utils.rst  ctrm.environment.instance.rst  ctrm.environment.obstacle.rst  ctrm.environment.rst  ctrm.environment.static_objects.rst  ctrm.learning.batch_gen.rst  ctrm.learning.compiled.rst  ctrm.learning.dataset.rst  ctrm.learning.formats.base.rst  ctrm.learning.formats.format_input.rst  ctrm.learning.formats.format_output.rst  ctrm.learning.formats.rst  ctrm.learning.formats.utils.rst  ctrm.learning.fov.rst  ctrm.learning.model.agent_encoder.rst  ctrm.learning.model.cvae.rst  ctrm.learning.model.fov_encoder.rst  ctrm.learning.model.model.rst  ctrm.learning.model.net.rst  ctrm.learning.model.rst  ctrm.learning.rst  ctrm.learning.utils.rst  ctrm.planner.cbs.rst  ctrm.planner.planner.rst  ctrm.planner.prioritized_planning.rst  ctrm.planner.result.rst  ctrm.planner.rst  ctrm.planner.utils.rst  ctrm.roadmap.grid_sampler.rst  ctrm.roadmap.random_sampler.rst  ctrm.roadmap.rst  ctrm.roadmap.spars_sampler.rst  ctrm.roadmap.timed_roadmap.rst  ctrm.roadmap.utils.rst  ctrm.roadmap_learned.learned_sampler.rst  ctrm.roadmap_learned.rst  ctrm.roadmap_learned.utils.rst  ctrm.rst  (+4 more)
notebooks/: CTRM_demo.ipynb  CTRM_demo_ins.pkl  Figure 4.ipynb  (+4 more)
(+139 files in other folders)
